data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3762.wast
;; 1. **Test Description**: Create a module with a `call` instruction invoking a function just before a `br_table` with the index exactly at the number of available targets. The goal is to check whether the `wizard_engine`'s `parser.readFuncRef()` handles this boundary case correctly compared to WebAssembly's explicit context lookup for function indices.    - **Reasoning**: This checks if the wizard_engine correctly enforces the boundary conditions handling of `br_table` indices.

(assert_invalid
  (module
    (type (func))
    (func $testFunc
      unreachable
      (block (call 0) (br_table 1 (i32.const 1)))
    )
  )
  "invalid target index in br_table"
)